--- a/css/resume.css
+++ b/css/resume.css
@@ -169,9 +169,9 @@ section.resume-section .resume-item .resume-date {
   }
 }
 
-.bg-primary {
+/* .bg-primary {
   background-color: #31DFCD !important;
-}
+} */
 
 .text-primary {
   color: #31DFCD !important;
